fix(Select): fix double scroll in sheet on mobile (#1672)

--- a/src/components/Select/components/SelectList/SelectList.scss
+++ b/src/components/Select/components/SelectList/SelectList.scss
@@ -22,7 +22,7 @@ $xl-right-padding: '12px';
     }
 
     &_mobile {
-        max-height: calc(90vh - 20px);
+        max-height: 100%;
     }
 
     &__group-label,
